vlib/v/checker/tests/match_range_mismatch_type_err.vv
fn main() {
	x := '1'
	match x {
		`0`...`9` {
			println('0-9')
		}
		else {
			println('!0-9')
		}
	}
}

fn abc() {
	x := 1
	match x {
		0...`9` {}
		else {}
	}
}
